# waterfurnace

./: .bumpversion.toml  .gitignore  .travis.yml  AGENTS.md  AUTHORS.rst  CHANGELOG.md  CONTRIBUTING.md  CONTRIBUTING.rst  HISTORY.rst  IMPROVEMENT_PLAN.md  LICENSE  MANIFEST.in  MIGRATION_GUIDE.md  MODERNIZATION_SUMMARY.md  Makefile  README.md  README.rst  RELEASE.md  pyproject.toml  requirements_dev.txt  setup.cfg  setup.py  tox.ini  travis_pypi_setup.py
.github/: ISSUE_TEMPLATE.md
.github/workflows/: pypi-upload.yml  python-app.yml  release.yml
docs/: .gitignore  Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst  waterfurnace_write_commands.md
tests/: __init__.py  conftest.py  test_symphony.py  test_timeout.py  test_waterfurnace.py  test_write.py
waterfurnace/: __init__.py  cli.py  waterfurnace.py
waterfurnace2/: __init__.py
